fix dropdown arrow z-index problem

--- a/client/src/components/StageDropdown/assets/style.css
+++ b/client/src/components/StageDropdown/assets/style.css
@@ -25,6 +25,9 @@
     width: 25px;
     top: 0;
     right: 0;
+}
+
+.active.stage-select-container .selected-stage .arrow {
     z-index: 300;
 }
 
